alterando caminho da pagina de estilos e das imagens no html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>TecBlog - O seu blog de tecnologia</title>
 		<meta charset="utf-8">
 
-		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<link rel="stylesheet" type="text/css" href="estilo_css/estilo.css">
 
 	</head>
 
@@ -28,7 +28,7 @@
 						<h2 class="titulo_conteudo">Tecnologia Home-Office</h2>
 						<h6 class="data_postagem">Postado em 01 de junho de 2020.</h6>
 
-						<img src="imagem2.jpg" class="imagem">
+						<img src="imagens/imagem2.jpg" class="imagem">
 
 						<p class="texto">
 							Os benefícios do home office são inegáveis, mas muitas empresas ainda se preocupam em como manter  um ambiente de negócios seguro com seus funcionários trabalhando remotamente. Algumas táticas, no entanto, podem ajudar na proteção de dados das empresas e minimizar eventuais riscos.
@@ -50,7 +50,7 @@
 						<h2 class="titulo_conteudo">Descubra o poder das aplicações Mobile</h2>
 						<h6 class="data_postagem">Postado em 25 de maio de 2020.</h6>
 
-						<img src="imagem3.jpg" class="imagem">
+						<img src="imagens/imagem3.jpg" class="imagem">
 
 						<p class="texto">
 							Durante os últimos anos, nossa empresa tem criado expertise no desenvolvimento mobile nas tecnologias predominantes do mercado (Android ou iOS). Entretanto, entendemos que criar essas aplicações e disponibilizá-las para múltiplas lojas de aplicativos pode não ser interessante para nossos clientes em alguns casos, vendo que essa variedade de plataformas e de dispositivos que temos atualmente cria um grande desafio. Uma vez que cada plataforma possui um ambiente e uma linguagem própria, surge a necessidade de se manter múltiplos times, múltiplas base de códigos e qualidade na experiência do usuário nessas aplicações, e isso pode custar muito tempo e dinheiro.
