Adicionando páginas e fotos do blog

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 				<h1 id="principal_text"  style="color: #3d3d3d;">Tec</h1>
 				<h1 id="principal_text" style="color: white;">Blog</h1>
 				<br><br>
-				<a href="">Home</a>
-				<a href="">Jogos</a>
-				<a href="">Celulares</a>
-				<a href="">Informática</a>
-				<a href="">Eletrônicos</a>
+				<a href="index.html">Home</a>
+				<a href="jogos.html">Jogos</a>
+				<a href="celulares.html">Celulares</a>
+				<a href="informatica.html">Informática</a>
+				<a href="eletronicos.html">Eletrônicos</a>
 		
 			</div>
 			<div class="view_principal">
@@ -79,10 +79,10 @@
 					</div>
 					<div class="caixas_postagem">
 					<h4 class="titulo_caixa">Categorias</h4>
-						<a href="">Jogos</a><br>
-						<a href="">Celulares</a><br>
-						<a href="">Informática</a><br>
-						<a href="">Eletrônicos</a><br>
+						<a href="jogos.html">Jogos</a><br>
+						<a href="celulares.html">Celulares</a><br>
+						<a href="informatica.html">Informática</a><br>
+						<a href="eletronicos.html">Eletrônicos</a><br>
 					</div>
 				</div>
 			</div>
